tdf#96858 - opengl - fix off-by-1 in glScissor clipping.

Change-Id: I3085e2d2848e2041c2faadbfce099ce75c62b712
Reviewed-on: https://gerrit.libreoffice.org/21043
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>